--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     depends_on:
       - prometheus
 
-  node_exporter:
+  node-exporter:
     image: prom/node-exporter:latest
     container_name: node-exporter
     ports:
