--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,9 @@ services:
     image: prom/prometheus:latest
     container_name: prometheus
     volumes:
-      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
-      - ./prometheus/alert-rules.yml:/etc/prometheus/alert-rules.yml
+      - ./prometheus:/etc/prometheus
     command:
-      - "--config.file=/ect/prometheus/prometheus.yml"
+      - "--config.file=/etc/prometheus/prometheus.yml"
 
     ports:
       - "9090:9090"
@@ -20,7 +19,7 @@ services:
     image: prom/alertmanager:latest
     container_name: alertmanager
     volumes:
-      - ./alertmanager/alertmanager.yml:/etc/alertmanager/alertmanager.yml
+      - ./alertmanager:/etc/alertmanager
     command:
       - "--config.file=/etc/alertmanager/alertmanager.yml"
     ports:
@@ -43,5 +42,5 @@ services:
       - "9100:9100"
 
 volumes:
-  grafana-data:
+  grafana-storage:
     
