--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -18,5 +18,5 @@ scrape_configs:
 
    - job_name: node_exporter
      static_configs:
-       - targets: ["node-exporter:9100"]
+       - target: ["node-exporter:9100"]
     
